# PickandPlace

./: README.md
control/: CMakeLists.txt  package.xml
control/include/control/: control.h
control/scripts/: dynamic.py
control/src/: control.cpp  main.cpp
lemons/: CMakeLists.txt  package.xml
lemons/config/: target.yaml
lemons/launch/: lemons.launch
lemons_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ros_controllers.yaml
lemons_moveit/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  lemons_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
moveit/: .setup_assistant  CMakeLists.txt  package.xml
moveit/config/: lemons.srdf  ompl_planning.yaml  ros_controllers.yaml
moveit/launch/: default_warehouse_db.launch  gazebo.launch  planning_pipeline.launch.xml  ros_controllers.launch  setup_assistant.launch
perception/: CMakeLists.txt  package.xml
perception/include/perception/: vision.h
perception/src/: main.cpp  vision.cpp
perception/srv/: getTransform.srv
simenv/: CMakeLists.txt  package.xml
simenv/launch/: simenv.launch
simenv/meshes/gripper/: finger_left.dae  finger_left_collision.dae  finger_right.dae  gripper_base.dae
simenv/models/Apriltag36_11_00000/: model.sdf
simenv/urdf/: arm.gazebo.xacro  arm.xacro  belt.xacro  cube.urdf  gripper.xacro  simenv.urdf  simenv.xacro
