<package format='2'>

  <name>control</name>
  <version>1.0.0</version>
  <description>
  Control of lemons
  </description>
  <maintainer email="praneeth.pep@gmail.com">kvk praneeth</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>

</package>

